# writer

./: CMakeLists.txt  README.md  decodeless_writer-config.cmake
.github/workflows/: build_and_test.yml
include/decodeless/: pmr_writer.hpp  writer.hpp
test/: CMakeLists.txt  gcc_cxx_debug_backtrace.cmake
test/src/: writer.cpp
